Fix buttons and inputs have wrong size

--- a/react/src/styles/App.module.scss
+++ b/react/src/styles/App.module.scss
@@ -21,6 +21,8 @@ input {
     background: transparent;
     border: none;
     outline: none;
+    font-size: inherit;
+    line-height: inherit;
 }
 
 
@@ -36,6 +38,8 @@ button {
     background-color: transparent;
     border: none;
     outline: none;
+    font-size: inherit;
+    line-height: inherit;
 }
 
 
